feat: add and apply biome
